	  stack sizes, some features, and buffer sizes made the
	  configuration reliable (Reading from the LCD is still disabled).
	* net/uip/uip_icmpping.c:  Fix problem that prevented ping from
	  going outside of local network.  Submitted by Darcy Gong

6.23 2012-09-29 Gregory Nutt <gnutt@nuttx.org>

	* arch/arm/src/stm32/stm32_rng.c, chip/stm32_rng.h, and other files:
	  Implementation of /dev/random using the STM32 Random Number
	  Generator (RNG).
	* board.h file for shenzhou, fire-stm32v2, and olimex-stm32-p107:
	  Add frequencies for HSE, HSI, LSE, and LSI.  These are needed
	  by the STM32 watchdog driver.
	* CONFIG_EXAMPLES_*: To make things consistent, changed all occurrences
	  of CONFIG_EXAMPLE_* to CONFIG_EXAMPLES_*.
	* drivers/mtd/w25.c and configs/*/src/up_w25.c:  Several fixes for the
	  W25 SPI FLASH.
	* configs/*/Make.defs:  All buildroot tools now use the extension
	  xxx-nuttx-elf- vs. xxx-elf-
	* configs/shenzhou/*/Make.defs:  Now uses the new buildroot 4.6.3
	  EABI toolchain.
	* lib/stdio/lib_libdtoa.c:  Another dtoa() fix from Mike Smith.
	* configs/shenzhou/src/up_adc.c:  Add ADC support for the Shenzhou
	  board (Darcy Gong).
	* configs/shenzhou/thttpd:  Add a THTTPD configuration for the
	  Shenzhou board (Darcy Gong).
	* include/termios.h and lib/termios/libcf*speed.c: The non-standard,
	  "hidden" c_speed cannot be type const or else static instantiations
	  of termios will be required to initialize it (Mike Smith).
	* drivers/input/max11802.c/h, and include/nuttx/input max11802.h:  Adds
	  support for the Maxim MAX11802 touchscreen controller (contributed by
	  Petteri Aimonen).
	* graphics/nxtk/nxtk_events.c:  Missing implementatin of the blocked
	  method.  This is a critical bugfix for graphics support (contributed
	  by Petteri Aimonen).
	* drivers/usbdev/pl2303.c, drivers/usbdev/usbmsc.h, and
	  include/nuttx/usb/cdcacm.h: USB_CONFIG_ATTR_SELFPOWER vs.
	  USB_CONFIG_ATT_SELFPOWER (contributed by Petteri Aimonen).