@@ -41,12 +41,16 @@ HEAD_ASRC	= kinetis_vectors.S
 
 CMN_ASRCS	= up_saveusercontext.S up_fullcontextrestore.S up_switchcontext.S
 CMN_CSRCS	= up_allocateheap.c up_assert.c up_blocktask.c up_copystate.c \
-		  up_createstack.c up_mdelay.c up_udelay.c up_exit.c up_initialize.c \
-		  up_memfault.c up_initialstate.c up_interruptcontext.c \
-		  up_modifyreg8.c up_modifyreg16.c up_modifyreg32.c \
-		  up_releasestack.c up_reprioritizertr.c up_schedulesigaction.c \
-		  up_releasepending.c up_sigdeliver.c up_unblocktask.c up_usestack.c \
-		  up_doirq.c up_hardfault.c up_svcall.c up_checkstack.c
+			  up_createstack.c up_mdelay.c up_udelay.c up_exit.c up_initialize.c \
+			  up_memfault.c up_initialstate.c up_interruptcontext.c \
+			  up_modifyreg8.c up_modifyreg16.c up_modifyreg32.c \
+			  up_releasestack.c up_reprioritizertr.c up_schedulesigaction.c \
+			  up_releasepending.c up_sigdeliver.c up_unblocktask.c up_usestack.c \
+			  up_doirq.c up_hardfault.c up_svcall.c up_checkstack.c
+
+ifeq ($(CONFIG_ARCH_MEMCPY),y)
+CMN_ASRCS	+= up_memcpy.S
+endif
 
 ifeq ($(CONFIG_NET),y)
 ifneq ($(CONFIG_KINETIS_ENET),y)
@@ -58,8 +62,8 @@ endif
 
 CHIP_ASRCS	=
 CHIP_CSRCS	= kinetis_clockconfig.c kinetis_clrpend.c kinetis_idle.c \
-		  kinetis_irq.c kinetis_lowputc.c kinetis_pin.c kinetis_pingpio.c \
-		  kinetis_serial.c kinetis_start.c kinetis_timerisr.c kinetis_wdog.c
+			  kinetis_irq.c kinetis_lowputc.c kinetis_pin.c kinetis_pingpio.c \
+			  kinetis_serial.c kinetis_start.c kinetis_timerisr.c kinetis_wdog.c
 
 # Configuration-dependent Kinetis files
 
