@@ -41,14 +41,18 @@ HEAD_ASRC	= sam3u_vectors.S
 
 CMN_ASRCS	= up_saveusercontext.S up_fullcontextrestore.S up_switchcontext.S
 CMN_CSRCS	= up_assert.c up_blocktask.c up_copystate.c up_createstack.c \
-		  up_mdelay.c up_udelay.c up_exit.c up_idle.c up_initialize.c \
-		  up_initialstate.c up_interruptcontext.c up_memfault.c up_modifyreg8.c \
-		  up_modifyreg16.c up_modifyreg32.c up_releasepending.c \
-		  up_releasestack.c up_reprioritizertr.c up_schedulesigaction.c \
-		  up_sigdeliver.c up_unblocktask.c up_usestack.c up_doirq.c \
-		  up_hardfault.c up_svcall.c
+			  up_mdelay.c up_udelay.c up_exit.c up_idle.c up_initialize.c \
+			  up_initialstate.c up_interruptcontext.c up_memfault.c up_modifyreg8.c \
+			  up_modifyreg16.c up_modifyreg32.c up_releasepending.c \
+			  up_releasestack.c up_reprioritizertr.c up_schedulesigaction.c \
+			  up_sigdeliver.c up_unblocktask.c up_usestack.c up_doirq.c \
+			  up_hardfault.c up_svcall.c
 
 # Configuration-dependent common files
+
+ifeq ($(CONFIG_ARCH_MEMCPY),y)
+CMN_ASRCS	+= up_memcpy.S
+endif
 
 ifeq ($(CONFIG_NUTTX_KERNEL),y)
 CHIP_CSRCS	+= up_mpu.c
@@ -58,8 +62,8 @@ endif
 
 CHIP_ASRCS	= 
 CHIP_CSRCS	= sam3u_allocateheap.c sam3u_clockconfig.c sam3u_gpioirq.c \
-		  sam3u_irq.c sam3u_lowputc.c sam3u_pio.c sam3u_serial.c \
-		  sam3u_start.c sam3u_timerisr.c
+			  sam3u_irq.c sam3u_lowputc.c sam3u_pio.c sam3u_serial.c \
+			  sam3u_start.c sam3u_timerisr.c
 
 # Configuration-dependent SAM3U files
 
